--- a/report/references.bib
+++ b/report/references.bib
@@ -5,3 +5,15 @@
   doi       = {doi:10.18112/openneuro.ds004392.v1.0.0},
   publisher = {OpenNeuro}
 }
+
+@article{35903957,
+  year   = {2022 Dec 15},
+  title  = {Default mode network mediates low-frequency fluctuations in brain activity and},
+  author = {Zhang H},
+  author = {Yang SY},
+  author = {Qiao Y},
+  author = {Ge Q},
+  author = {Tang YY},
+  author = {Northoff G},
+  author = {Zang YF}
+}
