--- a/report/references.bib
+++ b/report/references.bib
@@ -17,3 +17,19 @@
   author = {Northoff G},
   author = {Zang YF}
 }
+
+@misc{NIH3DPX021161,
+  author = {National Institutes of Health 3D Print Exchange},
+  title  = {3DPX-021161: Brain Model},
+  year   = {2025},
+  url    = {https://3d.nih.gov/entries/3DPX-021161},
+  note   = {Accessed: 2025-03-25}
+}
+
+@misc{WoodsParkinsonsStudy,
+  author = {E. F. Woods},
+  title  = {Parkinson's Disease Study},
+  year   = {2025},
+  url    = {https://efwoods.github.io/Parkinsons_Disease_Study/},
+  note   = {Accessed: 2025-03-25}
+}
