--- a/report/HW_Module3_Evan_Woods.tex
+++ b/report/HW_Module3_Evan_Woods.tex
@@ -67,12 +67,103 @@ The patients fALFF scores for each region were then grouped by cluster and corre
 \textit{(2 points) The described methodology has been applied in complete and the results shown (that is, the author did not forget to include anything they discussed in the methodology.) }
 
 
+
+
 \section{Part 4: Discussion}
 \textit{(2 points) Question does not need to be successfully answered, but the grader should be convinced that the author has answered the question to the best ability of the methodology presented.}
 \textit{(1 point) Provides commentary on what was discovered, what were the limitations of the methods, what may have been surprising to discover, etc.}
 \textit{(1 point) Award this point if the question was successfully answered to the grader's satisfaction. }
 
+
+
+
+
+
+
+
+
+
 \newpage
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/fALFF_SN_fas_test_correlation_heatmap.png"}  % Replace with your image file name and path
+    \caption{This is the heatmap of correlations with respect to the substantia nigra left, the substantia nigra right, the cluster assignments, and the FAS Verbal Phonemic Fluency Test scores.}
+    \label{fig:heatmap}  % Label for referencing the figure
+\end{figure}
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/fALFF_SN_Spectral_Clustering.png"}  % Replace with your image file name and path
+    \caption{Spectral Clustering of PCA and T-SNE projection of the of the substantia nigra fALFF.}
+    \label{fig:clustering}  % Label for referencing the figure
+\end{figure}
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/pdf_of_clustered_test_results.png"}  % Replace with your image file name and path
+    \caption{Distribution of Neurocognitive Battery Test Results and Metrics Grouped by Cognitive Diagnosis.}
+    \label{fig:pdf}  % Label for referencing the figure
+\end{figure}
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/regions.png"}  % Replace with your image file name and path
+    \caption{This is the harvard-oxford atlas of the subcortical regions of the brain.}
+    \label{fig:subcortex}  % Label for referencing the figure
+\end{figure}
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/statistically_significant_correlated_regions_sn_cogn_pdd_graph.png"}  % Replace with your image file name and path
+    \caption{2-Dimensional Undirected Weighted Network Graph of Brain Regions with Correlations with No Statistical Significant Difference of fALFF to the Right Substantia Nigra fALFF.}
+    \label{fig:2D}  % Label for referencing the figure
+\end{figure}
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/statistically_significant_correlated_regions_sn_cogn.png"}  % Replace with your image file name and path
+    \caption{Bar Plot of Brain Regions with No Statistical Significant Difference in Correlation of fALFF with Respect to the Right Substantia Nigra fALFF among Cognitively Normal Parkinson's Disease Patients.}
+    \label{fig:cn}  % Label for referencing the figure
+\end{figure}
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/statistically_significant_correlated_regions_sn_mci.png"}  % Replace with your image file name and path
+    \caption{Bar Plot of Brain Regions with No Statistical Significant Difference in Correlation of fALFF with Respect to the Right Substantia Nigra fALFF among Mild Cognitive Impaired Parkinson's Disease Patients.}
+    \label{fig:mci}  % Label for referencing the figure
+\end{figure}
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/statistically_significant_correlated_regions_sn_pdd.png"}  % Replace with your image file name and path
+    \caption{Bar Plot of Brain Regions with No Statistical Significant Difference in Correlation of fALFF with Respect to the Right Substantia Nigra fALFF among Parkinson's Disease Dementia Patients.}
+    \label{fig:pdd}  % Label for referencing the figure
+\end{figure}
+
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/brain_atlas.png"}  % Replace with your image file name and path
+    \caption{Atlas of the Right Substantia Nigra.}
+    \label{fig:SNR}  % Label for referencing the figure
+\end{figure}
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/anatomy.png"}  % Replace with your image file name and path
+    \caption{Example of the Anatomical Images of the Patients in the Dataset.}
+    \label{fig:anatomy}  % Label for referencing the figure
+\end{figure}
+
+\begin{figure}[h]  % "htbp" means "here, top, bottom, page" – LaTeX decides the best position
+    \centering
+    \includegraphics[width=\textwidth]{"../img/3D_Plot_of_Correlated_fALFF.png"}  % Replace with your image file name and path
+    \caption{3-Dimensional Undirected Weighted Network Graph of Brain Regions with Correlations with No Statistical Significant Difference of fALFF to the Right Substantia Nigra fALFF.}
+    \label{fig:3D}  % Label for referencing the figure
+\end{figure}
+
+\newpage 
 
 
 \begin{center}
