figures, tables, and code added

--- a/notebooks/cluster_analysis.ipynb
+++ b/notebooks/cluster_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,6 +278,46 @@
     "cv_df_imputed = pd.read_csv(df_dir + \"cv_df_imputed.csv\")\n",
     "p_imputed_df = pd.read_csv(df_dir + \"participant_imputed_cleaned_master_df.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "participant_id                sub-0202\n",
+       "age                   76.9260273972603\n",
+       "sex                                  1\n",
+       "handedness                           3\n",
+       "years_of_education                  16\n",
+       "attention                      0.74333\n",
+       "executive                      0.08219\n",
+       "global                        -0.12135\n",
+       "language                       0.58319\n",
+       "memory                         -1.2636\n",
+       "visuospatial                 -0.181613\n",
+       "moca_total                        23.0\n",
+       "drs                              133.0\n",
+       "tmt_a                            27.82\n",
+       "tmt_b                           159.49\n",
+       "bta                               19.0\n",
+       "sdmt_oral                         38.0\n",
+       "bnt                               59.0\n",
+       "cvlt15                            17.0\n",
+       "cvlt_ld_tot                        1.0\n",
+       "fas                               39.0\n",
+       "jlo                               25.0\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -5247,7 +5287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5260,7 +5300,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_imputed_df_clustered.loc[0, \"cluster\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -5326,13 +5386,41 @@
        "2                     0.573540                1.434661  Cognitively Normal"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cluster_key_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrl}\n",
+      "\\toprule\n",
+      " & Substantia Nigra Left & Substantia Nigra Right & Cognitive Health \\\\\n",
+      "Cluster &  &  &  \\\\\n",
+      "\\midrule\n",
+      "0 & 0.332347 & -0.091915 & MCI \\\\\n",
+      "1 & -1.161762 & -1.059544 & PDD \\\\\n",
+      "2 & 0.573540 & 1.434661 & Cognitively Normal \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "latex_table = cluster_key_df.to_latex(index=True)\n",
+    "print(latex_table)"
    ]
   },
   {
