--- a/report/references.bib
+++ b/report/references.bib
@@ -33,3 +33,11 @@
   url    = {https://efwoods.github.io/Parkinsons_Disease_Study/},
   note   = {Accessed: 2025-03-25}
 }
+
+@misc{openai2023chatgpt,
+  author = {OpenAI},
+  title  = {ChatGPT: {A}lternative Language Model for Conversational Agents},
+  year   = {2023},
+  url    = {https://chat.openai.com/},
+  note   = {Accessed: 2025-03-25}
+}
