stable state dev

--- a/report/references.bib
+++ b/report/references.bib
@@ -41,3 +41,19 @@
   url    = {https://chat.openai.com/},
   note   = {Accessed: 2025-03-25}
 }
+
+@article{https://doi.org/10.1111/acel.13031,
+  author   = {Trist, Benjamin G. and Hare, Dominic J. and Double, Kay L.},
+  title    = {Oxidative stress in the aging substantia nigra and the etiology of Parkinson's disease},
+  journal  = {Aging Cell},
+  volume   = {18},
+  number   = {6},
+  pages    = {e13031},
+  keywords = {antioxidant, oxidative stress, Parkinson's disease, reactive oxygen species},
+  doi      = {https://doi.org/10.1111/acel.13031},
+  url      = {https://onlinelibrary.wiley.com/doi/abs/10.1111/acel.13031},
+  eprint   = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/acel.13031},
+  abstract = {Abstract Parkinson's disease prevalence is rapidly increasing in an aging global population. With this increase comes exponentially rising social and economic costs, emphasizing the immediate need for effective disease-modifying treatments. Motor dysfunction results from the loss of dopaminergic neurons in the substantia nigra pars compacta and depletion of dopamine in the nigrostriatal pathway. While a specific biochemical mechanism remains elusive, oxidative stress plays an undeniable role in a complex and progressive neurodegenerative cascade. This review will explore the molecular factors that contribute to the high steady-state of oxidative stress in the healthy substantia nigra during aging, and how this chemical environment renders neurons susceptible to oxidative damage in Parkinson's disease. Contributing factors to oxidative stress during aging and as a pathogenic mechanism for Parkinson's disease will be discussed within the context of how and why therapeutic approaches targeting cellular redox activity in this disorder have, to date, yielded little therapeutic benefit. We present a contemporary perspective on the central biochemical contribution of redox imbalance to Parkinson's disease etiology and argue that improving our ability to accurately measure oxidative stress, dopaminergic neurotransmission and cell death pathways in vivo is crucial for both the development of new therapies and the identification of novel disease biomarkers.},
+  year     = {2019}
+}
+
